--- a/doclimb-app/package.json
+++ b/doclimb-app/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "@google/genai": "^1.33.0",
     "@supabase/supabase-js": "^2.87.1",
-    "axios": "^1.13.2",
+    "axios": "^1.13.5",
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "express-session": "^1.19.0",
+    "qs": "^6.14.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1",
