--- a/doclimb-app/package.json
+++ b/doclimb-app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@google/genai": "^1.33.0",
     "@supabase/supabase-js": "^2.87.1",
+    "@vercel/analytics": "^1.6.1",
     "axios": "^1.13.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
