--- a/doclimb-app/package.json
+++ b/doclimb-app/package.json
@@ -21,6 +21,7 @@
     "qs": "^6.14.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.10.1",
     "sweetalert2": "^11.26.10",
     "uuid": "^13.0.0"
